force-app/main/default/objects/Grants_Sponsorships__c/Grants_Sponsorships__c.object-meta.xml
<CustomObject>
    <label>Grants/Sponsorships</label>
    <nameField>
        <displayFormat>GS-{000000}</displayFormat>
        <label>Grants/Sponsorships Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Grants/Sponsorships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>