force-app/main/default/objects/Grants_Sponsorships__c/fields/Actual_Award__c.field-meta.xml
<CustomField>
    <fullName>Actual_Award__c</fullName>
    <label>Actual Award</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>