force-app/main/default/objects/Grants_Sponsorships__c/fields/Date_of_Award__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Award__c</fullName>
    <label>Date of Award</label>
    <type>Date</type>
</CustomField>