force-app/main/default/objects/Grants_Sponsorships__c/fields/Fund__c.field-meta.xml
<CustomField>
    <fullName>Fund__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fund</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Grants/Sponsorships (Fund)</relationshipLabel>
    <relationshipName>Grants_Sponsorships1</relationshipName>
    <type>Lookup</type>
</CustomField>