force-app/main/default/objects/Grants_Sponsorships__c/fields/Organization__c.field-meta.xml
<CustomField>
    <fullName>Organization__c</fullName>
    <label>Organization</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Grants/Sponsorships</relationshipLabel>
    <relationshipName>Grants_Sponsorships</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>