force-app/main/default/objects/Grants_Sponsorships__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Grant</fullName>
            </value>
            <value>
                <fullName>Membership</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>