force-app/main/default/objects/Grants_Sponsorships__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Organization__c</columns>
    <columns>Type__c</columns>
    <columns>Potential_Award__c</columns>
    <columns>Event_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>